--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     ></script>
 
     <div id="mainNavigation">
-      <nav role="navigation ">
-        <div class="py-3 text-center flex-row justify-between">
+      <nav role="navigation navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid py-3 text-center flex-row justify-between">
           <img src="/assets/logo.png" alt="" class="invert logo img-fluid" />
         </div>
       </nav>
@@ -192,14 +192,17 @@
       <div
         class="registration container d-flex align-items-center justify-content-center"
       >
-        <div class="d-flex flex-column">
-          <h1 class="text-light fs-3">Register now for <b>free</b></h1>
-          <h1 class="fs-6">The latest digital marketing techniques</h1>
+        <div
+          class="d-flex flex-column w-75 align-items-center justify-content-center"
+        >
+          <h1 class="text-light fs-2">Register now for</h1>
+          <h1 class="fw-bold text-light">free</h1>
+          <h1 class="fs-6 lh-1">The latest digital marketing techniques</h1>
           <div class="col-md-4 col-lg-2">
             <button class="btn2 btn-block">Send</button>
           </div>
         </div>
-        <form class="container w-90">
+        <form id="form-control" class="container w-90">
           <div class="row">
             <div class="col-md-6 mb-3">
               <label for="firstName" class="form-label">First Name</label>
@@ -227,6 +230,70 @@
             </div>
           </div>
         </form>
+      </div>
+
+      <div class="container d-flex align-items-center justify-content-center">
+        <div
+          class="d-flex flex-column  align-items-center justify-content-center"
+        >
+          <h1 class="heading2 mt-4 py-4">Speakers</h1>
+          <div class="d-flex flex-row ">
+            <div
+              class="d-flex flex-column align-items-start justify-content-center"
+            >
+              <div class="container speakers ms-3" style="margin-right: 390px">
+                <img src="/assets/02.png" alt="" class="invert" />
+                <div class="box">
+                  <p class="fs-4">MCT, MCSA, CPM, AZ104, AZ500</p>
+                </div>
+              </div>
+              <div class="width">
+                <h1 class="text-light">Eng. Abdullah Sawalha</h1>
+                <ul>
+                  <li class="text-light">
+                    Winner of first place Microsoft Innovation Award
+                  </li>
+                  <li class="text-light">
+                    Certified trainer, project manager, developer and researcher at Microsoft, a global cloud systems company
+                  </li>
+                  <li class="text-light">
+                    With more than 18 years of experience in the field of information technology
+                  </li>
+            
+                </ul>
+              </div>
+            </div>
+
+            <div
+              class="d-flex flex-column align-items-center justify-content-center"
+            >
+              <div class="container speakers">
+                <img src="/assets/01.png" alt="" class="invert" />
+                <div class="box">
+                  <p class="fs-4">MCT, MCSA, CPM, AZ104, AZ500</p>
+                </div>
+              </div>
+              <div class="width">
+                <h1 class="text-light">Eng. Muhammad Abu Allawi</h1>
+                <ul>
+                  <li class="text-light">
+                    He received the award for the best evaluation as a cybersecurity trainer for the year 2021/2022
+                  </li>
+                  <li class="text-light">
+                    Cybersecurity expert and global consultant in digital security and cybercrime
+                  </li>
+                  <li class="text-light">
+                    He holds a number of international accreditations in the field of cybersecurity
+                  </li>
+                  <li class="text-light">
+                    More than 18 years of experience in information technology and cybersecurity
+                  </li>
+       
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
   </body>
