--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
       </div>
 
       <div
-        class="container d-flex align-items-center justify-content-center mt-4"
+        class="container d-flex align-items-center justify-content-center mt-4 " 
       >
-        <div class="container">
+        <div class="container " >
           <div class="d-flex flex-column justify-content-between gap-3">
-            <h1 class="heading2 mt-4 py-4">Webinar Agenda</h1>
+            <h1 class="heading2 mt-4 py-4" style="margin-top: 50px;">Webinar Agenda</h1>
             <div class="d-flex flex-row justify-content-center">
               <div class="cloud">
                 <h1 class="text-light">Cloud Computing</h1>
@@ -232,12 +232,12 @@
         </form>
       </div>
 
-      <div class="container d-flex align-items-center justify-content-center">
+      <div class="container d-flex align-items-center justify-content-center" style="margin-bottom: 380px;">
         <div
-          class="d-flex flex-column  align-items-center justify-content-center"
+          class="d-flex flex-column align-items-center justify-content-center"
         >
           <h1 class="heading2 mt-4 py-4">Speakers</h1>
-          <div class="d-flex flex-row ">
+          <div class="d-flex flex-row">
             <div
               class="d-flex flex-column align-items-start justify-content-center"
             >
@@ -254,12 +254,13 @@
                     Winner of first place Microsoft Innovation Award
                   </li>
                   <li class="text-light">
-                    Certified trainer, project manager, developer and researcher at Microsoft, a global cloud systems company
+                    Certified trainer, project manager, developer and researcher
+                    at Microsoft, a global cloud systems company
                   </li>
                   <li class="text-light">
-                    With more than 18 years of experience in the field of information technology
+                    With more than 18 years of experience in the field of
+                    information technology
                   </li>
-            
                 </ul>
               </div>
             </div>
@@ -270,31 +271,48 @@
               <div class="container speakers">
                 <img src="/assets/01.png" alt="" class="invert" />
                 <div class="box">
-                  <p class="fs-4">MCT, MCSA, CPM, AZ104, AZ500</p>
+                  <p class="fs-4">CND, CEH, CSA, CHFI, CISM</p>
                 </div>
               </div>
               <div class="width">
                 <h1 class="text-light">Eng. Muhammad Abu Allawi</h1>
                 <ul>
                   <li class="text-light">
-                    He received the award for the best evaluation as a cybersecurity trainer for the year 2021/2022
+                    He received the award for the best evaluation as a
+                    cybersecurity trainer for the year 2021/2022
                   </li>
                   <li class="text-light">
-                    Cybersecurity expert and global consultant in digital security and cybercrime
+                    Cybersecurity expert and global consultant in digital
+                    security and cybercrime
                   </li>
                   <li class="text-light">
-                    He holds a number of international accreditations in the field of cybersecurity
+                    He holds a number of international accreditations in the
+                    field of cybersecurity
                   </li>
                   <li class="text-light">
-                    More than 18 years of experience in information technology and cybersecurity
+                    More than 18 years of experience in information technology
+                    and cybersecurity
                   </li>
-       
                 </ul>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+ 
     </main>
+    <footer class="w-100">
+      <div class="container d-flex flex-column align-items-center justify-content-center">
+        <h1 class="heading2 mt-4 py-4">Internationally accredited by</h1>
+        <div class="footer">
+          <div class="d-flex flex-row justify-content-between">
+            <img src="/assets/image1.png" alt=""  />
+            <img src="/assets/layer.png" alt=""  />
+            <img src="/assets/image2.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
