--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <img
                   src="/assets/icon1.png"
                   alt=""
-                  class="invert logo img-fluid"
+                  class="invert  img-fluid"
                 />
 
                 <ul>
@@ -240,7 +240,7 @@
                 <img
                   src="/assets/icon2.png"
                   alt=""
-                  class="invert logo img-fluid"
+                  class="invert img-fluid"
                 />
 
                 <ul>
@@ -420,9 +420,7 @@
     <footer
       class="container d-flex flex-column align-items-center justify-content-center"
     >
-      <!-- <div
-        class="container d-flex flex-column align-items-center justify-content-center"
-      > -->
+   
       <h1 class="heading2 mt-4 py-4">Internationally accredited by</h1>
       <div class="footer">
         <div class="row">
@@ -446,7 +444,7 @@
           />
         </div>
       </div>
-      <!-- </div> -->
+
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
