--- a/index.html
+++ b/index.html
@@ -398,7 +398,8 @@
           <h1 class="heading2" style="margin-bottom: 80px;">Cybersecurity and Cloud Computing</h1>
         </div>
       </div>
-
+        i fell for him yeah but that doesnt mean that i can sell my pride for him to talk to me ik it hurts a lot , cuz we used to talk everyday and play everyday but i dont think that he cares about me at all i hate him
+        
       <div
         style="margin-top:100px;"
       class="relative container d-flex align-items-center justify-content-center mt-4 hero"
