--- a/main.html
+++ b/main.html
@@ -368,7 +368,7 @@
         </section>
      
       </main>
-<!--   
+  
       <h1 class="heading2 mt-4 py-4">Internationally accredited by</h1>
       <footer class="footer" style="background-color: white;">
         <div >
@@ -396,7 +396,7 @@
           </div>
       
         </div>
-      </footer> -->
+      </footer>
     </header>
 
     <script
