--- a/main.html
+++ b/main.html
@@ -301,7 +301,7 @@
                 <div class="cloud col-md-6">
                   
                 
-                    <div class=" speakers mb-3 px-1">
+                    <div class=" speakers mb-3 px-1 hi">
                       <img src="/assets/02.png" alt="" class="invert img1" />
                       <div class="box">
                         <p class="fs-4">MCT, MCSA, CPM, AZ104, AZ500</p>
