--- a/main.html
+++ b/main.html
@@ -277,7 +277,7 @@
   
         </div>
 
-        <section class="container  px-0">
+        <section class="container d-flex justify-content-center px-0">
           <div
         class="registration row "
       >
