--- a/main.html
+++ b/main.html
@@ -84,7 +84,7 @@
       }
       .hero-content-svg-5{
         position: absolute;
-        /* top: 10px; */
+        top: 10px;
         right: 46px;
         height: 529px;
         z-index: 1;
@@ -118,7 +118,7 @@
       .left-svg-3 {
         position: absolute;
         left: 2.5%;
-        top: 73.3%;
+        top: 69.3%;
       }
 
       .right-svg-1{
@@ -155,7 +155,7 @@
       .left-lg-svg-3 {
         position: absolute;
         left: 1.1%;
-        top: 212%;
+        top: 211%;
         z-index: -1;
 
       }
@@ -292,6 +292,7 @@
             position:absolute;
             top:89.5%;
             left:-9%;
+            z-index: -1
           }
           .left-sm-svg-4 {
             position:absolute;
@@ -301,6 +302,10 @@
           }
           .p-hero {
             text-align: justify;
+          }
+          .footer {
+            min-width: 400px;
+
           }
           .row-footer {
             min-width: 330px;
@@ -315,26 +320,26 @@
         .hero{
           min-width:320px;
         }
-        .speakers {
+        /* .speakers {
             width: 320px;
             height: auto;
           }
           .box {
             width: 300px;
-          }
+          } */
 
        
           .row-hero {
             flex-direction: column-reverse;
             align-self:center;
           }
-          .speakers-one {
+          /* .speakers-one {
             width:218px;
           }
 
           .speakers-two{
             width: 218px;
-          }
+          } */
 
           .heading2 {
             min-width: 243px;
@@ -368,6 +373,7 @@
 
       }
 
+
     </style>
     <title>Pioneers Academy</title>
   </head>
@@ -380,7 +386,7 @@
           </div>
     </header>
 
-    <main class="container-fluid px-0">
+    <main class="container-fluid px-0 justify-content-center align-items-center">
 
     <section>
       <div class="d-flex flex-column justify-content-center align-items-center custom-mb-100 px-5">
