--- a/main.html
+++ b/main.html
@@ -185,6 +185,7 @@
         border-radius: 48px 48px 0px 0px;
         gap:88px;
       }
+   
     </style>
   <title>Pioneers Academy</title>
   </head>
@@ -318,7 +319,7 @@
 
     <section>
       <div class="d-flex flex-column justify-content-center align-items-center custom-mb-100 px-5">
-        <h1 class="heading2">Webinar Agenda</h1>
+        <h1 class="heading2 text-center">Webinar Agenda</h1>
       </div>
     </section>
 
@@ -350,7 +351,7 @@
       <div class="d-flex justify-content-center">
       <div class="row mx-5 con-cloud">
         <div class="col-12 col-lg-6 ps-md-3 pe-0 cloud">
-          <h1 class="text-light" style="margin-top: 60px;">Cloud Computing</h1>
+          <h1 class="text-light text-center" style="margin-top: 60px;">Cloud Computing</h1>
           <img
             src="/assets/icon1.png"
             alt=""
@@ -375,7 +376,7 @@
           </ul></div>
         </div>
         <div class="col-12 col-lg-6 ps-md-3 pe-0 cloud ">
-          <h1 class="text-light" style="margin-top: 60px;">Cyber security</h1>
+          <h1 class="text-light text-center" style="margin-top: 60px;">Cyber security</h1>
           <img
             src="/assets/icon2.png"
             alt=""
@@ -497,8 +498,8 @@
               </div>
             </div>
             <div class="width " >
-              <h1 class="text-light">Eng. Abdullah Sawalha</h1>
-              <ul >
+              <h1 class="text-light text-center">Eng. Abdullah Sawalha</h1>
+              <ul  style="padding-bottom: 48px;">
                 <li class="text-light">
                   Winner of first place Microsoft Innovation Award
                 </li>
@@ -524,8 +525,8 @@
               </div>
             </div>
             <div class="width" style="margin-bottom:200px;">
-              <h1 class="text-light">Eng. Muhammad Abu Allawi</h1>
-              <ul >
+              <h1 class="text-light text-center">Eng. Muhammad Abu Allawi</h1>
+              <ul>
                 <li class="text-light">
                   He received the award for the best evaluation as a
                   cybersecurity trainer for the year 2021/2022
@@ -554,7 +555,7 @@
 
 
     <section>
-      <div class="d-flex flex-column justify-content-center px-5">
+      <div class="d-flex flex-column justify-content-center px-0 px-md-5">
         <h1 class="heading2">Internationally accredited by</h1>
       </div>
     </section>
