--- a/main.html
+++ b/main.html
@@ -498,8 +498,8 @@
               </div>
             </div>
             <div class="width " >
-              <h1 class="text-light text-center">Eng. Abdullah Sawalha</h1>
-              <ul  style="padding-bottom: 48px;">
+              <h1 class="text-light">Eng. Abdullah Sawalha</h1>
+              <ul >
                 <li class="text-light">
                   Winner of first place Microsoft Innovation Award
                 </li>
@@ -525,8 +525,8 @@
               </div>
             </div>
             <div class="width" style="margin-bottom:200px;">
-              <h1 class="text-light text-center">Eng. Muhammad Abu Allawi</h1>
-              <ul>
+              <h1 class="text-light">Eng. Muhammad Abu Allawi</h1>
+              <ul >
                 <li class="text-light">
                   He received the award for the best evaluation as a
                   cybersecurity trainer for the year 2021/2022
