final-pioneers-campaign

--- a/main.html
+++ b/main.html
@@ -11,191 +11,16 @@
     />
     
     <link rel="stylesheet" href="style2.css" />
-    <style>
-      .custom-mb-100 {
-        margin-bottom: 100px;
-
-      }
-      .custom-mt-150 {
-        margin-top: 150px;
-
-      }
-
-      .hero {
-        background-color: #219EBC;
-        padding: 3rem;
-        border-radius: 48px;
-
-      }
-
-      .p-hero {
-        color: #fff;
-        line-height: 35px;
-        padding: 3rem 0;
-        font-size: 20px;
-      }
-      
-      .btn-yellow {
-        background-color: var(--bs-btn);
-        color: #000;
-        max-width: 350px;
-        min-width: 200px;
-        margin-inline-end: 1rem;
-      }
-
-      .btn-yellow:hover{
-        background-color: var(--bs-btn-hover);
-      }
-
-      .hero-content{
-        display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-      }
-
-      .hero-content-svg-1{
-        position: absolute;
-        left: 12px;
-        top: 150px;
-        z-index: -1;
-        WIDTH: 100px;
-        height: auto;
-      }
-      .hero-content-md-svg-1{
-        position: absolute;
-        right: 10%;
-        top: -80px;
-      }
-      .hero-content-svg-2 {
-        position: absolute;
-        left: 60px;
-        top: -80px;
-      }
-
-      .hero-content-svg-3{
-        position: absolute;
-        top: -43px;
-        /* right: 327px; */
-      }
-      .hero-content-svg-4{
-        position: absolute;
-        bottom: -60px;
-        left: 54px;
-      }
-      .hero-content-svg-5{
-        position: absolute;
-        top: 10px;
-        right: 46px;
-        height: 529px;
-        z-index: 1;
-      }
-      .hero-content-md-svg-5{
-        position:absolute;
-        z-index: 1;
-        top: 1%;
-
-      }
-      .left-svg-1 {
-        position: absolute;
-        left: 2%;
-        top: 24%;
-      }
-      .left-md-svg-1{
-        position:absolute;
-        left: -2%;
-        top: 62%;
-        z-index: -1;
-      }
-      .left-md-svg-2{
-        position:absolute;
-        left: 0%;
-        top: 64%;
-        z-index:-1;
-      }
-      .left-svg-2 {
-        position: absolute;
-        left: 6%;
-        top: 24%;
-      }
-      .left-svg-3 {
-        position: absolute;
-        left: 2.5%;
-        top: 69.3%;
-      }
-
-      .right-svg-1{
-        position: absolute;
-        right: 4.5%;
-        top: 24%;
-      }
-      .right-svg-2{
-        position: absolute;
-        right: 3%;
-        top: 17%;
-        z-index: -1;
-      }
-      .right-svg-3{
-        position: absolute;
-        right: 4.5%;
-        top: 63.9%;
-        z-index: -1;
-      }
-      .left-lg-svg-1 {
-        position: absolute;
-        left: 0%;
-        top: 55%;
-        z-index: -1;
-
-      }
-      .left-lg-svg-2 {
-        position: absolute;
-        left: 1%;
-        top: 59%;
-        z-index: -1;
-
-      }
-      .left-lg-svg-3 {
-        position: absolute;
-        left: 1.1%;
-        top: 211%;
-        z-index: -1;
-
-      }
-      .left-md-svg-3 {
-        position: absolute;
-        left: 2.1%;
-        top: 31.4%;
-        z-index: -1;
-      }
-      .right-md-svg-1 {
-        position: absolute;
-        right: 3.5%;
-        top: 23%;
-        z-index: -1;
-      }
-      .right-md-svg-2{
-        position: absolute;
-        right: 5.5%;
-        top: 46.5%;
-        z-index: -1;
-      }
-      .footer {
-        background-color: #fff;
-        padding: 50px;
-        border-radius: 48px 48px 0px 0px;
-        gap:88px;
-      }
-   
-    </style>
-  <title>Pioneers Academy</title>
+     <title>Pioneers Academy</title>
   </head>
   <body dir="ltr">
     <header class="container-fluid px-0">
-          <div
-            class="d-flex justify-content-between  py-4 px-5 header" style="height: 100px">
-              <img src="/assets/logo.png" alt="" class="invert logo img-fluid" />
-              <button class="nav-button">العربية</button>
-          </div>
+      <div class="row mx-0 mx-md-0 d-flex justify-content-around my-3" style="flex-direction: row;">
+          <img src="assets/logo.png" alt="" class=" col-6 col-lg-2 invert logo img-fluid" style="max-width: 221px;">
+          <button class=" nav-button col-4 col-md-2">
+          <span class="fs-3">العربية</span>
+          </button>
+      </div>
     </header>
 
     <main class="container-fluid px-0 justify-content-center align-items-center">
@@ -497,8 +322,8 @@
                 <p class="fs-4">MCT, MCSA, CPM, AZ104, AZ500</p>
               </div>
             </div>
-            <div class="width " >
-              <h1 class="text-light">Eng. Abdullah Sawalha</h1>
+            <div class="width speaker-margin-bottom" >
+              <h1 class="text-light text-center">Eng. Abdullah Sawalha</h1>
               <ul >
                 <li class="text-light">
                   Winner of first place Microsoft Innovation Award
@@ -525,7 +350,7 @@
               </div>
             </div>
             <div class="width" style="margin-bottom:200px;">
-              <h1 class="text-light">Eng. Muhammad Abu Allawi</h1>
+              <h1 class="text-light text-center">Eng. Muhammad Abu Allawi</h1>
               <ul >
                 <li class="text-light">
                   He received the award for the best evaluation as a
