final-pioneers-campaign

--- a/main.html
+++ b/main.html
@@ -305,7 +305,7 @@
               </div>
             </div>
             <div class="width speaker-margin-bottom" >
-              <h1 class="text-light text-center">Eng. Abdullah Sawalha</h1>
+              <h1 class="text-light text-center names">Eng. Abdullah Sawalha</h1>
               <ul >
                 <li class="text-light">
                   Winner of first place Microsoft Innovation Award
@@ -329,7 +329,7 @@
               </div>
             </div>
             <div class="width" style="margin-bottom:200px;">
-              <h1 class="text-light text-center">Eng. Muhammad Abu Allawi</h1>
+              <h1 class="text-light text-center names">Eng. Muhammad Abu Allawi</h1>
               <ul >
                 <li class="text-light">
                   He received the award for the best evaluation as a
