--- a/main.html
+++ b/main.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/michalsnik/aos/2.0.1/dist/aos.css" />
+    <script src="https://cdn.rawgit.com/michalsnik/aos/2.0.1/dist/aos.js"></script>
      <title>Pioneers Academy</title>
   </head>
   <body dir="ltr">
@@ -27,7 +29,7 @@
       </div>
     </section>
     
-    <section class="position-relative">
+    <section  data-aos="fade-up" class="position-relative">
       <div class="d-flex justify-content-center custom-mb-100">
         <svg xmlns="http://www.w3.org/2000/svg" class="hero-content-svg-5 d-lg-flex d-md-none d-none" width="647" height="578" viewBox="0 0 647 578" fill="none">
           <path d="M625 3L625.354 2.64645L625.207 2.5H625V3ZM646 24H646.5V23.7929L646.354 23.6464L646 24ZM646 556L646.354 556.354L646.5 556.207V556H646ZM625 577V577.5H625.207L625.354 577.354L625 577ZM592.833 3C592.833 4.47276 594.027 5.66667 595.5 5.66667C596.973 5.66667 598.167 4.47276 598.167 3C598.167 1.52724 596.973 0.333333 595.5 0.333333C594.027 0.333333 592.833 1.52724 592.833 3ZM3.5 577H3V577.5H3.5V577ZM0.833333 553.5C0.833333 554.973 2.02724 556.167 3.5 556.167C4.97276 556.167 6.16667 554.973 6.16667 553.5C6.16667 552.027 4.97276 550.833 3.5 550.833C2.02724 550.833 0.833333 552.027 0.833333 553.5ZM624.646 3.35355L645.646 24.3536L646.354 23.6464L625.354 2.64645L624.646 3.35355ZM645.5 24V556H646.5V24H645.5ZM645.646 555.646L624.646 576.646L625.354 577.354L646.354 556.354L645.646 555.646ZM625 2.5H595.5V3.5H625V2.5ZM625 576.5H595.5V577.5H625V576.5ZM595.5 576.5H3.5V577.5H595.5V576.5ZM4 577V553.5H3V577H4Z" fill="white"/>
@@ -140,7 +142,7 @@
       </div>
     </section>
 
-    <section class="position-relative">
+    <section data-aos="fade-up" class="position-relative">
       <svg xmlns="http://www.w3.org/2000/svg" class="left-svg-1 d-none d-md-flex" width="49" height="493" viewBox="0 0 49 493" fill="none">
         <path d="M48.1667 490C48.1667 488.527 46.9728 487.333 45.5 487.333C44.0272 487.333 42.8333 488.527 42.8333 490C42.8333 491.473 44.0272 492.667 45.5 492.667C46.9728 492.667 48.1667 491.473 48.1667 490ZM45.5 442.5L46 442.5L46 442.293L45.8536 442.146L45.5 442.5ZM24.5 421.5L24 421.5L24 421.707L24.1464 421.854L24.5 421.5ZM45.5 90.5L45.8536 90.8535L46 90.7071L46 90.5L45.5 90.5ZM48.1667 56C48.1667 54.5273 46.9728 53.3333 45.5 53.3333C44.0272 53.3333 42.8333 54.5273 42.8333 56C42.8333 57.4727 44.0272 58.6667 45.5 58.6667C46.9728 58.6667 48.1667 57.4727 48.1667 56ZM3.5 90.5L3 90.5L3 90.7071L3.14645 90.8535L3.5 90.5ZM6.16667 3.5C6.16667 2.02725 4.97277 0.833343 3.50001 0.833343C2.02725 0.833343 0.833338 2.02725 0.833338 3.5C0.833338 4.97275 2.02725 6.16666 3.50001 6.16666C4.97277 6.16666 6.16667 4.97275 6.16667 3.5ZM46 490L46 442.5L45 442.5L45 490L46 490ZM45.8536 442.146L24.8536 421.146L24.1464 421.854L45.1464 442.854L45.8536 442.146ZM25 421.5L25 111.5L24 111.5L24 421.5L25 421.5ZM24.8536 111.854L45.8536 90.8535L45.1465 90.1465L24.1465 111.146L24.8536 111.854ZM46 90.5L46 56L45 56L45 90.5L46 90.5ZM24.8536 111.146L3.85356 90.1465L3.14645 90.8535L24.1465 111.854L24.8536 111.146ZM4 90.5L4.00001 3.5L3.00001 3.5L3 90.5L4 90.5Z" fill="#FFD26C"/>
       </svg>
@@ -228,7 +230,7 @@
       </svg>
     </section>
 
-    <section class="position-relative d-flex justify-content-center mx-5 mx-md-5">
+    <section  class="position-relative d-flex justify-content-center mx-5 mx-md-5">
       <svg xmlns="http://www.w3.org/2000/svg" class="d-lg-flex d-none d-md-none left-lg-svg-1" width="439" height="1754" viewBox="0 0 439 1754" fill="none">
         <path d="M32.1667 1750.5C32.1667 1749.03 30.9728 1747.83 29.5001 1747.83C28.0273 1747.83 26.8334 1749.03 26.8334 1750.5C26.8334 1751.97 28.0273 1753.17 29.5001 1753.17C30.9728 1753.17 32.1667 1751.97 32.1667 1750.5ZM29.5001 1586H30.0001V1585.79L29.8536 1585.65L29.5001 1586ZM1.00012 1557.5H0.500122V1557.71L0.646576 1557.85L1.00012 1557.5ZM1.00012 1032.75L0.646576 1032.4L0.500122 1032.54V1032.75H1.00012ZM29.5001 1004.25L29.8536 1004.6L30.0001 1004.46V1004.25H29.5001ZM29.5001 870H30.0001V869.793L29.8536 869.646L29.5001 870ZM1.00012 841.5H0.500122V841.707L0.646576 841.854L1.00012 841.5ZM1.00012 3.5V3H0.500122V3.5H1.00012ZM438.667 3.5C438.667 2.02722 437.473 0.833374 436 0.833374C434.527 0.833374 433.333 2.02722 433.333 3.5C433.333 4.97278 434.527 6.16663 436 6.16663C437.473 6.16663 438.667 4.97278 438.667 3.5ZM30.0001 1750.5V1586H29.0001V1750.5H30.0001ZM29.8536 1585.65L1.35367 1557.15L0.646576 1557.85L29.1465 1586.35L29.8536 1585.65ZM1.50012 1557.5V1032.75H0.500122V1557.5H1.50012ZM1.35367 1033.1L29.8536 1004.6L29.1465 1003.9L0.646576 1032.4L1.35367 1033.1ZM30.0001 1004.25V870H29.0001V1004.25H30.0001ZM29.8536 869.646L1.35367 841.146L0.646576 841.854L29.1465 870.354L29.8536 869.646ZM1.50012 841.5V3.5H0.500122V841.5H1.50012ZM1.00012 4H436V3H1.00012V4Z" fill="#FFD26C"></path>
       </svg>
@@ -250,7 +252,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" class="d-md-none d-lg-none left-sm-svg-4" width="19" height="755" viewBox="0 0 19 755" fill="none">
         <path d="M18.1669 752C18.1669 750.527 16.973 749.333 15.5002 749.333C14.0275 749.333 12.8336 750.527 12.8336 752C12.8336 753.473 14.0275 754.667 15.5002 754.667C16.973 754.667 18.1669 753.473 18.1669 752ZM15.5002 722.313H16.0002V722.106L15.8537 721.96L15.5002 722.313ZM1.17873 708H0.678726V708.207L0.825274 708.354L1.17873 708ZM1.17873 57.5092L0.829283 57.1516L0.678726 57.2986V57.5092H1.17873ZM15.5002 43.515L15.8497 43.8726L16.0002 43.7255V43.515H15.5002ZM18.1669 3.5C18.1669 2.02722 16.973 0.833313 15.5002 0.833313C14.0275 0.833313 12.8336 2.02722 12.8336 3.5C12.8336 4.97278 14.0275 6.16669 15.5002 6.16669C16.973 6.16669 18.1669 4.97278 18.1669 3.5ZM16.0002 752V722.313H15.0002V752H16.0002ZM15.8537 721.96L1.53218 707.646L0.825274 708.354L15.1468 722.667L15.8537 721.96ZM1.67873 708V57.5092H0.678726V708H1.67873ZM1.52817 57.8668L15.8497 43.8726L15.1508 43.1573L0.829283 57.1516L1.52817 57.8668ZM16.0002 43.515V3.5H15.0002V43.515H16.0002Z" fill="#FFD26C"></path>
       </svg>
-      <div class=" row registration custom-mb-100 custom-mt-150">
+      <div data-aos="fade-up" class=" row registration custom-mb-100 custom-mt-150">
         <div class="col-xl-6 col-lg-6 col-12 px-3 mb-4 px-lg-0">
           <h1 class="text-light fs-2 text-center">Register now for</h1>
           <h1 class="fw-bold text-light mb-3 text-center">free</h1>
@@ -289,13 +291,13 @@
       </div>
      </section>
 
-    <section>
+    <section >
       <div class="d-flex flex-column justify-content-center align-items-center custom-mb-100 px-5">
         <h1 class="heading2">Speakers</h1>
       </div>
     </section>
 
-    <section class="d-flex justify-content-center ">
+    <section data-aos="fade-up" class="d-flex justify-content-center ">
       <div class="row mx-0 mx-md-5">
         <div class="col-12 col-xl-6 mx-0 px-0 px-lg-5 cloud ">
             <div class=" position-relative speakers mb-3">
@@ -365,5 +367,9 @@
           <img src="/assets/image2.png" class="col-6 ps-4 pe-0 d-md-flex-column col-lg-3" alt="" />
         </div>
     </footer>
+
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
