--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <header class="container-fluid px-0">
       <div class="row mx-0 mx-md-0 d-flex justify-content-around my-3" style="flex-direction: row;">
           <a href="https://www.pioneersacademy.com/" class=" col-6 col-lg-2" >
-            <img src="assets/logo.png" alt="" class="  invert logo img-fluid" style="max-width: 221px;">
+            <img src="./assets/logo.png" alt="" class="  invert logo img-fluid" style="max-width: 221px;">
           </a>
           <button class=" nav-button col-4 col-md-2">
           <span class="fs-3">العربية</span>
@@ -29,7 +29,7 @@
       </div>
     </section>
     
-    <section  data-aos="fade-up" class="position-relative">
+    <section  class="position-relative">
       <div class="d-flex justify-content-center custom-mb-100">
         <svg xmlns="http://www.w3.org/2000/svg" class="hero-content-svg-5 d-lg-flex d-md-none d-none" width="647" height="578" viewBox="0 0 647 578" fill="none">
           <path d="M625 3L625.354 2.64645L625.207 2.5H625V3ZM646 24H646.5V23.7929L646.354 23.6464L646 24ZM646 556L646.354 556.354L646.5 556.207V556H646ZM625 577V577.5H625.207L625.354 577.354L625 577ZM592.833 3C592.833 4.47276 594.027 5.66667 595.5 5.66667C596.973 5.66667 598.167 4.47276 598.167 3C598.167 1.52724 596.973 0.333333 595.5 0.333333C594.027 0.333333 592.833 1.52724 592.833 3ZM3.5 577H3V577.5H3.5V577ZM0.833333 553.5C0.833333 554.973 2.02724 556.167 3.5 556.167C4.97276 556.167 6.16667 554.973 6.16667 553.5C6.16667 552.027 4.97276 550.833 3.5 550.833C2.02724 550.833 0.833333 552.027 0.833333 553.5ZM624.646 3.35355L645.646 24.3536L646.354 23.6464L625.354 2.64645L624.646 3.35355ZM645.5 24V556H646.5V24H645.5ZM645.646 555.646L624.646 576.646L625.354 577.354L646.354 556.354L645.646 555.646ZM625 2.5H595.5V3.5H625V2.5ZM625 576.5H595.5V577.5H625V576.5ZM595.5 576.5H3.5V577.5H595.5V576.5ZM4 577V553.5H3V577H4Z" fill="white"/>
@@ -40,9 +40,9 @@
         <svg xmlns="http://www.w3.org/2000/svg" class=" d-flex d-lg-none d-md-none hero-content-sm-svg-5" width="323" height="270" viewBox="0 0 323 270" fill="none">
           <path d="M13.3194 3L12.9659 2.64644L13.1123 2.5H13.3194V3ZM0.999878 15.3192H0.499878V15.112L0.646332 14.9656L0.999878 15.3192ZM0.999878 252.148L0.560944 252.388L0.499878 252.276V252.148H0.999878ZM8.82819 266.5V267H8.53137L8.38925 266.739L8.82819 266.5ZM36.1667 3C36.1667 4.47276 34.9727 5.66667 33.5 5.66667C32.0273 5.66667 30.8333 4.47276 30.8333 3C30.8333 1.52724 32.0273 0.333333 33.5 0.333333C34.9727 0.333333 36.1667 1.52724 36.1667 3ZM322.667 266.5C322.667 267.973 321.473 269.167 320 269.167C318.527 269.167 317.333 267.973 317.333 266.5C317.333 265.027 318.527 263.833 320 263.833C321.473 263.833 322.667 265.027 322.667 266.5ZM13.6729 3.35356L1.35342 15.6727L0.646332 14.9656L12.9659 2.64644L13.6729 3.35356ZM1.49988 15.3192V252.148H0.499878V15.3192H1.49988ZM1.43881 251.909L9.26712 266.261L8.38925 266.739L0.560944 252.388L1.43881 251.909ZM13.3194 2.5H33.5V3.5H13.3194V2.5ZM8.82819 266H19.8251V267H8.82819V266ZM19.8251 266H240.509V267H19.8251V266ZM240.509 266H320V267H240.509V266Z" fill="white"/>
         </svg>
-        <div class="row flex-row-reverse mx-0 mx-md-5 position-relative hero">
-          <div class="col-lg-6 col-12 ps-3 pe-0 d-md-flex justify-content-end">
-            <img src="/assets/header.png" class="img-fluid " alt="" style="max-height: 450px ;">
+        <div  class="row flex-row-reverse mx-0 mx-md-5 position-relative hero">
+          <div data-aos="fade-left"  class="col-lg-6 col-12 ps-3 pe-0 d-md-flex justify-content-end">
+            <img src="./assets/header.png" class="img-fluid " alt="" style="max-height: 450px ;">
           </div>
        
           <div class="col-lg-6 col-12 pe-3 ps-0 text-light hero-content">
@@ -171,7 +171,7 @@
       <div class="row mx-5 con-cloud">
         <div class="col-12 col-lg-6 ps-md-3 pe-0 cloud">
           <h1 class="text-light text-center" style="margin-top: 60px;">Cloud Computing</h1>
-          <img src="/assets/icon1.png" alt="" class="invert  img-fluid" />
+          <img src="./assets/icon1.png" alt="" class="invert  img-fluid" />
           <div class="width">
           <ul>
             <li class="text-light">
@@ -193,7 +193,7 @@
         </div>
         <div class="col-12 col-lg-6 ps-md-3 pe-0 cloud ">
           <h1 class="text-light text-center" style="margin-top: 60px;">Cyber security</h1>
-          <img src="/assets/icon2.png" alt="" class="invert  img-fluid"/>
+          <img src="./assets/icon2.png" alt="" class="invert  img-fluid"/>
           <div class="width">
           <ul>
             <li class="text-light">
@@ -301,7 +301,7 @@
       <div class="row mx-0 mx-md-5">
         <div class="col-12 col-xl-6 mx-0 px-0 px-lg-5 cloud ">
             <div class=" position-relative speakers mb-3">
-              <img src="/assets/02.png" alt="" class="invert speakers-two" />
+              <img src="./assets/02.png" alt="" class="invert speakers-two" />
               <div class="box">
                 <p class="fs-4">MCT, MCSA, CPM, AZ104, AZ500</p>
               </div>
@@ -325,7 +325,7 @@
         </div>
         <div class="col-12 col-xl-6 mx-0 px-0 px-lg-5 cloud ">
             <div class="container speakers mb-3">
-              <img src="/assets/01.png" alt="" class="invert speakers-one" />
+              <img src="./assets/01.png" alt="" class="invert speakers-one" />
               <div class="box">
                 <p class="fs-4">CND, CEH, CSA, CHFI, CISM</p>
               </div>
@@ -362,9 +362,9 @@
     </section>
     <footer class="d-flex justify-content-center align-items-center footer">
         <div class="row justify-content-center align-items-center px-0 mx-0 mx-md-5 row-footer">
-          <img src="/assets/image1.png" class="col-6 ps-4 pe-0 d-md-flex-column col-lg-3" alt=""/>
-          <img src="/assets/layer.png" class="col-12  ps-2 pe-0 d-md-flex-column col-lg-6" alt=""/>
-          <img src="/assets/image2.png" class="col-6 ps-4 pe-0 d-md-flex-column col-lg-3" alt="" />
+          <img src="./assets/image1.png" class="col-6 ps-4 pe-0 d-md-flex-column col-lg-3" alt=""/>
+          <img src="./assets/layer.png" class="col-12  ps-2 pe-0 d-md-flex-column col-lg-6" alt=""/>
+          <img src="./assets/image2.png" class="col-6 ps-4 pe-0 d-md-flex-column col-lg-3" alt="" />
         </div>
     </footer>
 
